k8s/backend/node-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-node
  template:
    metadata:
      labels:
        app: backend-node
    spec:
      containers:
        - name: backend-node
          image: mathieudielna/back_node:latest
          ports:
            - containerPort: 3000
