k8s/backend/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend-node
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
